# awesome_wotlk

./: .gitignore  README.md  TRUST.md  build_grimfall_patch_x86.bat  build_install_macro_lite_x86.bat  build_macro_lite_x86.bat
.github/workflows/: windows-release.yml
addons/GrimfallMacroLite/: Core.lua  GrimfallMacroLite.toc
docs/: macro_lite.md
src/: CMakeLists.txt
src/AwesomeMacroLite/: AddonBridge.cpp  AddonBridge.h  CMakeLists.txt  CameraApiLite.cpp  CameraApiLite.h  Entry.cpp  GameClientLite.h  Log.cpp  Log.h  MacroParser.cpp  MacroParser.h  MacroTargetState.cpp  MacroTargetState.h  NameplateApi.cpp  NameplateApi.h  ObjectTargetApi.cpp  ObjectTargetApi.h  SlimHook.cpp  SlimHook.h  SpellStanceFix.cpp  SpellStanceFix.h  StanceFormFix.cpp  StanceFormFix.h  TerrainTargeting.cpp  TerrainTargeting.h  UnitApiLite.cpp  UnitApiLite.h  X86Hook.cpp  X86Hook.h
src/GrimfallWotlkPatch/: CMakeLists.txt  Main.cpp  Patch.h  Utils.h
